Fix failing `all-tests` and retry more flaky tests (#4188)
## Motivation

- Compile errors in Xcode 15 with iOS 16
- Flaky tests

## Description

### iOS 16 fixes

The following things aren't available:

- `@available(visionOS)` 
- `.topBarTrailing` (need to use `.navigationBarTrailing`)
- Fix issues with `Locale(identifier: "")` now returning `en` but ONLY
on iOS 16 in Xcode 15
  - iOS 17 returns the expected `nil` in Xcode 15
- There was a test using `#if swift` that was now being run by iOS 16
tests that needed an additional
`AvailabilityChecks.iOS17APIAvailableOrSkipTest()`

### Flaky tests fixes

Using new `scan_with_flaky_test_retries` action from in
`fastlane-plugin-revenuecat_internal`

- Replaces the `retry_failed_tests` lane that did a similar thing
- Removed a bunch of duplicated steps in the `.circle/config.yml` that
needed to run the `retry_failed_tests`
- `scan_with_flaky_test_retries` is now used in:
  - `test_ios`
  - `test_tvos`
  - `test_watchos`
  - `backend_integration_tests`

### Carthage tests timing out

The carthage installation tests timed out pretty regularly. They will
now use the large resource class (where everything else uses the medium)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,19 @@ executors:
       CIRCLECI_TESTS_GENERATE_REVENUECAT_UI_SNAPSHOTS: << pipeline.parameters.generate_revenuecatui_snapshots >>
     working_directory: ~/purchases-ios
     shell: /bin/bash --login -o pipefail
+  macos-executor-large:
+    parameters:
+      xcode_version:
+        type: string
+        default: '15.3'
+    macos:
+      xcode: << parameters.xcode_version >>
+    resource_class: macos.m1.large.gen1
+    environment:
+      CIRCLECI_TESTS_GENERATE_SNAPSHOTS: << pipeline.parameters.generate_snapshots >>
+      CIRCLECI_TESTS_GENERATE_REVENUECAT_UI_SNAPSHOTS: << pipeline.parameters.generate_revenuecatui_snapshots >>
+    working_directory: ~/purchases-ios
+    shell: /bin/bash --login -o pipefail
 
 aliases:
   release-branches: &release-branches
@@ -362,30 +375,6 @@ commands:
           no_output_timeout: 5m
           environment:
             SCAN_DEVICE: iPhone 15 (17.4.0)
-      - run:
-          name: Run RETRY 1 (of 4) backend_integration Tests
-          command: bundle exec fastlane retry_failed_tests retry_attempt:1
-          no_output_timeout: 5m
-          environment:
-            SCAN_DEVICE: iPhone 15 Pro (17.4.0)
-      - run:
-          name: Run RETRY 2 (of 4) backend_integration Tests
-          command: bundle exec fastlane retry_failed_tests retry_attempt:2
-          no_output_timeout: 5m
-          environment:
-            SCAN_DEVICE: iPhone 15 Pro Max (17.4.0)
-      - run:
-          name: Run RETRY 3 (of 4) backend_integration Tests
-          command: bundle exec fastlane retry_failed_tests retry_attempt:3
-          no_output_timeout: 5m
-          environment:
-            SCAN_DEVICE: iPhone 15 Plus (17.4.0)
-      - run:
-          name: Run RETRY 4 (of 4) backend_integration Tests
-          command: bundle exec fastlane retry_failed_tests retry_attempt:4 fail_build:true
-          no_output_timeout: 5m
-          environment:
-            SCAN_DEVICE: iPhone 15 Plus (17.4.0)
       - compress_result_bundle:
           directory: fastlane/test_output/xctest/ios
           bundle_name: BackendIntegrationTests
@@ -1058,7 +1047,7 @@ jobs:
 
   installation-tests-carthage:
     executor:
-      name: macos-executor
+      name: macos-executor-large
     steps:
       - checkout
       - trust-github-key
