--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,6 +92,20 @@ aliases:
         only: main
 
 commands:
+  set-maximum-duration:
+    parameters:
+      time:
+        type: integer
+        default: 10
+    steps:
+      - run:
+          name: Set maximum job duration to << parameters.time >> minutes
+          background: true
+          command: |
+            sleep << parameters.time >>m
+            curl --request POST \
+            --url https://circleci.com/api/v2/project/gh/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/job/$CIRCLE_BUILD_NUM/cancel \
+          --header "Circle-Token: $CIRCLECI_API_TOKEN"
   install-runtime:
     parameters:
       runtime-name:
@@ -678,6 +692,8 @@ jobs:
 
     steps:
       - checkout
+      - set-maximum-duration:
+          time: 10
       - install-dependencies:
           install_swiftlint: false
       - update-spm-installation-commit
