--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1369,34 +1369,34 @@ workflows:
             - "run-from-github-comments"
             - << pipeline.parameters.GHA_Meta >>
     jobs:
-      - backend-integration-tests-SK1
-      - backend-integration-tests-SK2
-      - backend-integration-tests-custom-entitlements
-      - backend-integration-tests-other
-      - build-tv-watch-and-macos
-      - build-visionos
+      # - backend-integration-tests-SK1
+      # - backend-integration-tests-SK2
+      # - backend-integration-tests-custom-entitlements
+      # - backend-integration-tests-other
+      # - build-tv-watch-and-macos
+      # - build-visionos
       - docs-build
-      - run-test-ios-14
-      - run-test-ios-15
-      - run-test-ios-16
-      - run-test-macos
-      - run-test-tvos
-      - run-test-watchos
-      - spm-receipt-parser
-      - spm-release-build
-      - spm-release-build-xcode-14
-      - spm-release-build-xcode-15
-      - spm-revenuecat-ui-ios-15
-      - spm-revenuecat-ui-ios-16
-      - run-revenuecat-ui-ios-17
-      - spm-revenuecat-ui-watchos
-      - installation-tests-cocoapods
-      - installation-tests-swift-package-manager
-      - installation-tests-custom-entitlement-computation-swift-package-manager
-      - installation-tests-carthage
-      - installation-tests-xcode-direct-integration
-      - installation-tests-receipt-parser
-      - api-tests
+      # - run-test-ios-14
+      # - run-test-ios-15
+      # - run-test-ios-16
+      # - run-test-macos
+      # - run-test-tvos
+      # - run-test-watchos
+      # - spm-receipt-parser
+      # - spm-release-build
+      # - spm-release-build-xcode-14
+      # - spm-release-build-xcode-15
+      # - spm-revenuecat-ui-ios-15
+      # - spm-revenuecat-ui-ios-16
+      # - run-revenuecat-ui-ios-17
+      # - spm-revenuecat-ui-watchos
+      # - installation-tests-cocoapods
+      # - installation-tests-swift-package-manager
+      # - installation-tests-custom-entitlement-computation-swift-package-manager
+      # - installation-tests-carthage
+      # - installation-tests-xcode-direct-integration
+      # - installation-tests-receipt-parser
+      # - api-tests
       - deploy-purchase-tester:
           dry_run: true
       
