--- a/Tests/TestingApps/PaywallsTester/PaywallsTester/Info.plist
+++ b/Tests/TestingApps/PaywallsTester/PaywallsTester/Info.plist
@@ -2,6 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.revenuecat.PaywallsTester</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>paywallsTester</string>
+			</array>
+		</dict>
+	</array>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>NSAppTransportSecurity</key>
