--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -590,6 +590,39 @@ jobs:
           path: fastlane/test_output
           destination: scan-test-output
 
+  run-revenuecat-ui-ios-18:
+    executor:
+      name: macos-executor
+      xcode_version: '16.0'
+
+    steps:
+      - checkout
+      - install-dependencies:
+          install_swiftlint: false
+      - update-spm-installation-commit
+      - run:
+          name: SPM RevenueCatUI Release Build
+          command: swift build -c release --target RevenueCatUI
+          no_output_timeout: 5m
+      - run:
+          name: SPM RevenueCatUI Tests
+          command: bundle exec fastlane test_revenuecatui
+          no_output_timeout: 15m
+          environment:
+            DEVICE: iPhone 16 Pro,OS=18.0
+      - create-snapshot-pr-if-needed:
+          condition: << pipeline.parameters.generate_revenuecatui_snapshots >>
+          job: "create_snapshots_repo_pr"
+          version: "revenuecatui-18"
+      - compress_result_bundle:
+          directory: fastlane/test_output
+          bundle_name: revenuecatui
+      - store_test_results:
+          path: fastlane/test_output/revenuecatui/tests.xml
+      - store_artifacts:
+          path: fastlane/test_output
+          destination: scan-test-output
+
   spm-revenuecat-ui-watchos:
     executor:
       name: macos-executor
@@ -631,6 +664,34 @@ jobs:
           condition: << pipeline.parameters.generate_snapshots >>
           job: "create_snapshot_pr"
           version: "macos"
+      - store_test_results:
+          path: fastlane/test_output
+      - store_artifacts:
+          path: fastlane/test_output/xctest
+          destination: scan-test-output
+
+  run-test-ios-18:
+    executor:
+      name: macos-executor
+      xcode_version: '16.0'
+
+    steps:
+      - checkout
+      - install-dependencies:
+          install_swiftlint: false
+      - run:
+          name: Run tests
+          command: bundle exec fastlane test_ios
+          no_output_timeout: 15m
+          environment:
+            SCAN_DEVICE: iPhone 16 (18.0)
+      - compress_result_bundle:
+          directory: fastlane/test_output/xctest/ios
+          bundle_name: RevenueCat
+      - create-snapshot-pr-if-needed:
+          condition: << pipeline.parameters.generate_snapshots >>
+          job: "create_snapshot_pr"
+          version: "ios-18"
       - store_test_results:
           path: fastlane/test_output
       - store_artifacts:
@@ -1242,6 +1303,7 @@ workflows:
   generate-snapshot:
     when: << pipeline.parameters.generate_snapshots >>
     jobs:
+      - run-test-ios-18
       - run-test-ios-17
       - run-test-ios-16
       - run-test-ios-15
@@ -1256,6 +1318,7 @@ workflows:
       - spm-revenuecat-ui-ios-15
       - spm-revenuecat-ui-ios-16
       - run-revenuecat-ui-ios-17
+      - run-revenuecat-ui-ios-18
 
   build-test:
     when:
@@ -1267,8 +1330,10 @@ workflows:
     jobs:
       - lint
       - run-test-ios-17
+      - run-test-ios-18
       - pod-lib-lint
       - run-revenuecat-ui-ios-17
+      - run-revenuecat-ui-ios-18
 
   create-tag:
     when:
@@ -1388,6 +1453,7 @@ workflows:
       - run-test-ios-14
       - run-test-ios-15
       - run-test-ios-16
+      - run-test-ios-18
       - run-test-macos
       - run-test-tvos
       - run-test-watchos
@@ -1399,6 +1465,7 @@ workflows:
       - spm-revenuecat-ui-ios-15
       - spm-revenuecat-ui-ios-16
       - run-revenuecat-ui-ios-17
+      - run-revenuecat-ui-ios-18
       - spm-revenuecat-ui-watchos
       - installation-tests-cocoapods
       - installation-tests-swift-package-manager
