remove run-test-ios-18 from all-tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -623,6 +623,34 @@ jobs:
           path: fastlane/test_output
           destination: scan-test-output
 
+    #       run-test-ios-18:
+    # executor:
+    #   name: macos-executor
+    #   xcode_version: '16.0'
+
+    # steps:
+    #   - checkout
+    #   - install-dependencies:
+    #       install_swiftlint: false
+    #   - run:
+    #       name: Run tests
+    #       command: bundle exec fastlane test_ios
+    #       no_output_timeout: 15m
+    #       environment:
+    #         SCAN_DEVICE: iPhone 16 (18.0)
+    #   - compress_result_bundle:
+    #       directory: fastlane/test_output/xctest/ios
+    #       bundle_name: RevenueCat
+    #   - create-snapshot-pr-if-needed:
+    #       condition: << pipeline.parameters.generate_snapshots >>
+    #       job: "create_snapshot_pr"
+    #       version: "ios-18"
+    #   - store_test_results:
+    #       path: fastlane/test_output
+    #   - store_artifacts:
+    #       path: fastlane/test_output/xctest
+    #       destination: scan-test-output
+
   spm-revenuecat-ui-watchos:
     executor:
       name: macos-executor
@@ -1453,7 +1481,6 @@ workflows:
       - run-test-ios-14
       - run-test-ios-15
       - run-test-ios-16
-      - run-test-ios-18
       - run-test-macos
       - run-test-tvos
       - run-test-watchos
