--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -609,7 +609,7 @@ jobs:
           command: bundle exec fastlane test_revenuecatui
           no_output_timeout: 15m
           environment:
-            DEVICE: iPhone 16 Pro,OS=18.0
+            DEVICE: iPhone 16,OS=18.0
       - create-snapshot-pr-if-needed:
           condition: << pipeline.parameters.generate_revenuecatui_snapshots >>
           job: "create_snapshots_repo_pr"
