--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,9 +125,9 @@ commands:
         type: string
         default: .
     steps:
-      # - restore_cache:
-      #     keys:
-      #       - v2-gem-cache-{{ checksum "Gemfile.lock" }}-{{ arch }}
+      - restore_cache:
+          keys:
+            - v3-gem-cache-{{ checksum "Gemfile.lock" }}-{{ arch }}
       # CircleCI images fail on Ruby 3.3
       # https://github.com/fastlane/fastlane/issues/21794#issuecomment-2021331335
       # Also, not using macos/switch-ruby because its broken
@@ -148,10 +148,10 @@ commands:
             bundle config set --local clean 'true'
             bundle config set --local path 'vendor/bundle'
             bundle install --redownload
-      # - save_cache:
-      #     key: v2-gem-cache-{{ checksum "Gemfile.lock" }}-{{ arch }}
-      #     paths:
-      #       - vendor/bundle
+      - save_cache:
+          key: v3-gem-cache-{{ checksum "Gemfile.lock" }}-{{ arch }}
+          paths:
+            - vendor/bundle
 
   install-dependencies:
     parameters:
