Revert "try --redownload with bundle install"
This reverts commit 5cba2315ad1256c0761fd55fc2e4bafdf256811e.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,7 +147,7 @@ commands:
           command: |
             bundle config set --local clean 'true'
             bundle config set --local path 'vendor/bundle'
-            bundle install --redownload
+            bundle install
       - save_cache:
           key: v3-gem-cache-{{ checksum "Gemfile.lock" }}-{{ arch }}
           paths:
