--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ fastlane/.env
 
 # Local build settings
 Local.xcconfig
+
+# Gets created when Cursor is used with the sswg Swift extension
+/.index-build/
