--- a/Local.xcconfig.SAMPLE
+++ b/Local.xcconfig.SAMPLE
@@ -22,6 +22,8 @@
 //    or write new ones.
 // 3. If there's any new build setting you think others can benefit from, please update the
 //    .SAMPLE file and open a pull request.
+//
+// Note that this file is read by the RevenueCat, PurchaseTester and PaywallsTester projects.
 // ======
 
 // Uncomment to enable the PAYWALL_COMPONENTS flag.
